@@ -7,6 +7,7 @@ Standard
 #include "RainUtilityFile.h"
 #include "RainWindowsLAM.h"
 
+#include <cstdarg>
 #include <iomanip> //EncodeURL and DecodeURL
 #include <sstream>
 #include <string>
@@ -29,6 +30,32 @@ namespace Rain
 		ss >> r;
 		return r;
 	}
+
+	//PackPointers packages a set of pointers into one variable, which the caller must free
+	template <typename T>
+	void PushToPtrVectorPtr (std::vector<void *> *p_vector_p, T *x)
+	{
+		p_vector_p->push_back (reinterpret_cast<void *>(x));
+		return;
+	}
+
+	template <typename T, typename... Args>
+	void PushToPtrVectorPtr (std::vector<void *> *p_vector_p, T *x, Args... args)
+	{
+		p_vector_p->push_back (reinterpret_cast<void *>(x));
+		PushToPtrVectorPtr (p_vector_p, args...);
+	}
+
+	template <typename... Args>
+	std::vector<void *> *PackPointers (Args... args)
+	{
+		std::vector<void *> *p_vector_p = new std::vector<void *> ();
+		PushToPtrVectorPtr (p_vector_p, args...);
+		return p_vector_p;
+	}
+
+	//can use in conjunction with PackPointers after done with the pack
+	void FreePtrVectorPtr (std::vector<void *> *p_vector_p);
 
 	char IntToBase64 (int x);
 	int Base64ToInt (char c);
